feat: add DTO mapping to blog endpoints